fix: do not allow zoom or refresh on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ html, body {
   width: 100vw;
   height: 100vh;
   margin: 0;
+  overscroll-behavior-y: contain;
 }
 
 .mat-bottom-sheet-container {
